<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemonDetailsActivityMainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/purple_background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/pokemonDetailsActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:transitionName="@string/pokemon_toolbar_transition_name"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIconTint="@android:color/white"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pokemonDetailsActivityCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityToolbar"
        app:strokeColor="#666"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pokemonDetailsActivityCardTopTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="001" />

            <ImageView
                android:id="@+id/pokemonDetailsActivityCardTopImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_pokeball"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardTopTextView"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pokemonDetailsActivityCardBottomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="180"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="001" />

            <ImageView
                android:id="@+id/pokemonDetailsActivityCardBottomImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="4dp"
                android:rotation="180"
                android:src="@drawable/ic_pokeball"
                app:layout_constraintBottom_toTopOf="@id/pokemonDetailsActivityCardBottomTextView"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/pokemonDetailsActivityCardCenterImageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/image_sample"
                app:layout_constraintDimensionRatio="1:0.7"
                app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardTopImageView"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pokemonDetailsActivityCardNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardCenterImageView"
                tools:text="Bulbasaur" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:animateLayoutChanges="true"
                app:layout_constraintBottom_toTopOf="@id/pokemonDetailsActivityCardBottomImageView"
                app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardNameTextView">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pokemonDetailsActivityCardTypeTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="56dp"
                    android:text="@string/pokemon_type_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/pokemonDetailsActivityCardTypeContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pokemonDetailsActivityCardTypeTextName"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pokemonDetailsActivityCardHeightTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:minWidth="56dp"
                    android:text="@string/pokemon_height_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardTypeTextName" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pokemonDetailsActivityCardHeightTextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@id/pokemonDetailsActivityCardHeightTextName"
                    app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardTypeTextName"
                    tools:text="0.7m" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pokemonDetailsActivityCardWeightTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:minWidth="56dp"
                    android:text="@string/pokemon_weight_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardHeightTextName" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pokemonDetailsActivityCardWeightTextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@id/pokemonDetailsActivityCardWeightTextName"
                    app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardHeightTextName"
                    tools:text="6.9kg" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pokemonDetailsActivityCardRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemonDetailsActivityCardWeightTextName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
